# fyp-djpkg-template

./: .gitignore  Dockerfile  Procfile2  README.md  _Procfile  docker-compose.yml  entrypoint.sh  heroku.html  heroku.yml  requirements.txt  setup.cfg
.github/workflows/: github-release.yml  python-package.yml
portfolio/: settings.py
